@@ -16,7 +16,7 @@ set (PLUGIN_LIST
     alert_test.cc
     alert_unixsock.cc
     log_null.cc
-    log_tcpdump.cc
+    log_pcap.cc
     unified2.cc
     unified2_common.h
 )
@@ -49,7 +49,7 @@ else (STATIC_LOGGERS)
     add_shared_library(alert_test loggers alert_test.cc)
     add_shared_library(alert_unixsock loggers alert_unixsock.cc)
     add_shared_library(log_null loggers log_null.cc)
-    add_shared_library(log_tcpdump loggers log_tcpdump.cc)
+    add_shared_library(log_pcap loggers log_pcap.cc)
     add_shared_library(unified2 loggers unified2.cc unified2_common.h)
 
 endif (STATIC_LOGGERS)
