@@ -6,6 +6,8 @@
 -- updated usage
 -- removed ! from error messages
 -- fixed command line vs conf output configs
+-- moved log_tcpdump to log_pcap
+-- changed all output filename configs to be based on module name
 
 122
 -- pulled thread pinning from Josh
